--- a/style.css
+++ b/style.css
@@ -13,6 +13,30 @@ body {
     height: 100vh;
     backdrop-filter: blur(2px);
   }
+
+.rain {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 999;
+}
+
+.raindrop {
+  position: absolute;
+  width: 2px;
+  height: 15px;
+  background: rgba(255, 255, 255, 0.6); /* цвет капель */
+  animation: fall linear infinite;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(100vh); /* капли движутся вниз */
+  }
+}
   
   /* Card-style container */
   #weather-output {
